--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alexlemars_75-npm-modal",
+  "name": "@alexlemars_75/npm-modal",
   "version": "0.1.0",
   "private": false,
   "main": "dist/index.js", 
